# cinema-backend

./: .env.example  pyproject.toml
api/v1/: urls.py
api/v1/users/: handlers.py  schemas.py
apps/users/exceptions/: auth.py  users.py
apps/users/models/: users.py
apps/users/repositories/: users.py
apps/users/services/: register.py  users.py
apps/users/use_cases/: register.py
core/: config.py  containers.py
core/database/: session.py
core/database/mixins/: __init__.py  id.py  timestamp.py
core/enums/: __init__.py  users.py
core/exceptions/: base.py
core/middlewares/: sqlalchemy.py
core/repositories/: base.py
core/security/: jwt.py  password.py
core/services/: base.py
migrations/: env.py
migrations/versions/: 3fabbaed17ac_добавлена_модель_users.py
tests/: conftest.py
tests/core/repositories/: test_orm.py
tests/core/s3/: test_minio.py
tests/factories/: base.py  user.py
tests/fixtures/: core.py
tests/users/: test_api.py
